# cerrotorre

./: .editorconfig  .gitignore  .gitlab-ci.yml  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  CLAUDE.md  COMPLETION-PLAN.md  Cargo.toml  Containerfile  E2E-TEST-RESULTS.md  IMPLEMENTATION-STATUS.md  Justfile  KEYGEN-PROGRESS-2026-02-05.md  MVP.adoc  PALIMPSEST.adoc  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  RUST-SIGNING-MIGRATION.md  SECURITY-AUDIT-2026-01-25.md  SECURITY-FIXES-SUMMARY.md  SESSION-COMPLETE-2026-01-25.md  SESSION-CONTINUATION-2026-01-25.md  SESSION-LIVE-TESTING-2026-01-25.md  SESSION-PHASE3-START-2026-01-25.md  SESSION-PUSH-COMPLETE-2026-01-25.md  SESSION-SUMMARY-2026-01-25.md  STATUS-2026-02-05.md  TRANSPARENCY-LOG-STATUS.md  alire.toml  cerro_torre.gpr  mustfile.toml
.claude/: CLAUDE.md
cerro_torre_stack/: .formatter.exs  AGENTS.md  README.adoc  README.md  SECURITY-SETUP.md  mix.exs  test_both_modes.sh
containerfiles/: README.adoc  ct-a.containerfile  ct-i.containerfile  ct.containerfile
containerfiles-extreme/: README.adoc  X-ct-a.containerfile  X-ct-i.containerfile  X-ct.containerfile
containerfiles-research/: R-ct-a.containerfile  R-ct-i.containerfile  R-ct.containerfile  README.adoc
docs/: A2ML-CLI-INTEGRATION.adoc  A2ML-INTEGRATION.adoc  ARCHITECTURE.md  CITATIONS.adoc  EVALUATION-REPORT.adoc  MISSING-SECURITY-COMPONENTS.adoc  MVP-PLAN.md  OUTSTANDING-WORK.md  QOL-AUDIT.adoc  ROADMAP.adoc  ROADMAP.md  SECURITY-STANDARDS-BY-COMPONENT.adoc  SECURITY-STANDARDS-COMPARISON.adoc  WORDPRESS-SECURITY-STACK.md  crypto-suites.adoc  sfc-inquiry-draft.md
(+142 files in other folders)
