# SPDX-License-Identifier: MPL-2.0
# Cerro Torre Cryptographic Signing CLI

[package]
name = "cerro-sign"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "MPL-2.0"
description = "Ed25519 signing utilities for Cerro Torre"
repository = "https://github.com/hyperpolymath/cerro-torre"

[[bin]]
name = "cerro-sign"
path = "src-rust/main.rs"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
